# wasp

./: .gitignore  .gitmodules  Dockerfile  ECOOP2022_AE_Submission_Document.md  LICENSE  README.md  dune-project  env.sh  flake.nix  wasp.opam  wasp.opam.template  waspc.opam
encoding/: dune-project  encoding.opam
encoding/lib/mappings/: z3_mappings.ml
encoding/lib/optimizers/: optimizer.ml
encoding/lib/solvers/: batch.ml  incremental.ml
encoding/lib/syntax/: expression.ml
wasp/: .gitignore  Makefile  README.md  dune  dune-project  wasp.opam
wasp/binary/: encode.ml
wasp/doc/: README_template.md  symISA.md
wasp/exec/: eval.ml  eval.mli  float.ml  int.ml
wasp/lib/: dune
wasp/lib/binary/: decode.ml  encode.ml  encode.mli  utf8.ml
wasp/lib/exec/: eval.ml  eval_numeric.ml  f32.ml  f32_convert.ml  f64.ml  float.ml  i32.ml  i32_convert.ml  i64.ml  int.ml
wasp/lib/host/: env.ml
wasp/lib/main/: flags.ml
wasp/lib/runtime/: func.ml  func.mli  global.ml  global.mli  instance.ml  memory.ml  memory.mli  table.ml
wasp/lib/script/: js.ml  run.ml  script.ml
wasp/lib/symbolic/: btree.ml  dune  run.ml  run.mli
wasp/lib/syntax/: ast.ml  operators.ml  types.ml  values.ml
wasp/lib/text/: arrange.ml  parser.mly
wasp/lib/util/: io.ml  lib.ml  source.mli
wasp/lib/valid/: valid.ml
wasp/main/: flags.ml  main.ml
wasp/meta/jslib/: wasm.ml
wasp/runtime/: func.mli  global.ml  global.mli  instance.ml  memory.mli
wasp/symbolic/: IncrementalEncoding.ml  Symrun.ml  Symrun.mli  Z3Encoding.ml  Z3Encoding2.ml  Z3Encoding2.mli  btree.ml  concolic.ml  constraints.ml  counter.ml  coverage.ml  encoding.ml  encoding.mli  evaluations.ml  execution_tree.ml  formula.ml  formula.mli  globals.ml  heap.ml  heap.mli  history.ml  logicenv.ml  ranges.ml  sf32.ml  sf64.ml  si32.ml  si64.ml  store.ml  symeval.ml  symmem.ml  symmem.mli  symmem2.ml  symmem2.mli  symstatic.ml  symvalue.ml
wasp/symbolic/static/: static_evaluations.ml  static_globals.ml  strategies.ml  symmem.ml  symmem.mli  varmap.ml
wasp/syntax/: ast.ml  operators.ml  values.ml
wasp/tests/: run.py  run_unit.py
wasp/tests/aws-cryptosdk-c/: Makefile  patch.sh
wasp/tests/bst/: Makefile  bst.c  bst.wat  mockups.c  mockups.h
wasp/tests/btree/: 2o1u.wast  2o2u.wast  2o3u.wast  3o1u.wast  3o2u.wast  3o3u.wast  4o1u.wast  4o2u.wast  4o3u.wast  5o1u.wast  5o2u.wast  5o3u.wast  6o1u.wast  6o2u.wast  6o3u.wast  7o1u.wast  7o2u.wast  7o3u.wast  8o1u.wast  8o2u.wast  9o1u.wast  9o2u.wast  BTree.wast
wasp/tests/btree-manticore/: 2o1u.wast  3o1u.wast  3o3u.wast  4o1u.wast  4o2u.wast  4o3u.wast  5o2u.wast  5o3u.wasm  5o3u.wast  6o1u.wast  6o2u.wast  7o1u.wast  7o2u.wast  7o3u.wast  8o2u.wast  9o2u.wast
wasp/tests/collections-c/: Makefile  Makefile.deps  add_mocks.sh  build.sh  for_wasp.py  for_wasp.sh  patch.sh  requirements.txt  run.py  run2.py
wasp/tests/fail/: test1.wast  test10.wast  test13.wast  test3.wast  test6.wast  test7.wast  test8.wast
wasp/tests/failing/: test1.1.wast  test11.wast  test12.wast  test13.wast  test14.wast  test15.wast  test16.wast  test2.wast  test3.wast  test4.wast  test5.wast  test8.wast  test9.wast
wasp/tests/libcsum_test/: Makefile  api.c  api.h  libc_summaries.c  libc_summaries.h  mockups.c  mockups.h  patch_mocks.sh  strlen_test1.c  strlen_test1.wat  utils.c  utils.h
wasp/tests/logic_bomb/: Makefile  logic_bomb.c  logic_bomb.wat  mockups.c  mockups.h
wasp/tests/pass/: test1.1.wast  test1.wast  test2.wast  test3.wast  test5.wast  test7.wast
wasp/text/: arrange.ml  lexer.mll  parser.mly
wasp/util/: io.ml  source.ml
wasp/valid/: valid.ml
(+7857 files in other folders)
