(include_subdirs unqualified)

(library
 (name wasp)
 ; The 'main' module shall not be part of the library, as it would start the
 ; WASM REPL every time in all the dependencies.
 ; We also need to exclude the 'wasm' module as it overlaps with the library
 ; name.
 (wrapped false)
 (libraries batteries z3)
 (modules :standard \ main wasp_ce wasp_se))

(executable
 (name main)
 (public_name wasm)
 (modules main)
 (libraries wasp))

(executable
 (name wasp_ce)
 (public_name wasp-ce)
 (modules wasp_ce)
 (libraries wasp))

(executable
 (name wasp_se)
 (public_name wasp-se)
 (modules wasp_se)
 (libraries wasp))

(subdir
 text
 (rule
  (target lexer.ml)
  (deps lexer.mll)
  (action
   (chdir
    %{workspace_root}
    (run %{bin:ocamllex} -ml -q -o %{target} %{deps}))))
 (ocamlyacc
  (modules parser)))

(env
 (dev
  (flags
   (-w +a-3-4-27-42-44-45-70 -warn-error +a))))
